--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -1,3 +1,5 @@
 spring.application.name=CustomerMS
 server.port=8200
 management.endpoints.web.exposure.include=*
+custribbon.ribbon.eureka.enabled=false
+custribbon.ribbon.listOfServers=http://localhost:8100,http://localhost:8200
