Change for eureka

--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -3,3 +3,5 @@ server.port=8200
 management.endpoints.web.exposure.include=*
 custribbon.ribbon.eureka.enabled=false
 custribbon.ribbon.listOfServers=http://localhost:8100,http://localhost:8300
+custribbon.default.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RandomRule
+eureka.client.service-url.defaultZone=http://localhost:2222/eureka
