--- a/CustomerMS.properties
+++ b/CustomerMS.properties
@@ -2,3 +2,7 @@ spring.application.name=CustomerMS
 server.port=8200
 management.endpoints.web.exposure.include=*
 eureka.client.service-url.defaultZone=http://localhost:2222/eureka
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=4
+hystrix.command.default.metrics.rollingStats.timeInMilliseconds=10000
+hystrix.command.default.circuitBreaker.errorThresholdPercetage=25
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=30000
