--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.zipkin.base-url=http://localhost:4444/
+spring.sleuth.sampler.percentage=1.0
