--- a/application.properties
+++ b/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.zipkin.baseUrl=http://localhost:4444/
+spring.zipkin.baseUrl=http://localhost:4444
 spring.sleuth.sampler.percentage=1.0
